@@ -20,7 +20,9 @@
 package xyz.zedler.patrick.grocy.view;
 
 import android.annotation.SuppressLint;
+import android.app.Activity;
 import android.content.Context;
+import android.content.Intent;
 import android.graphics.Color;
 import android.os.Handler;
 import android.os.Looper;
@@ -29,17 +31,14 @@ import android.os.Parcelable;
 import android.util.AttributeSet;
 import android.view.LayoutInflater;
 import android.view.View;
-import android.view.ViewGroup;
-import android.webkit.WebSettings;
 import android.webkit.WebView;
 import android.webkit.WebViewClient;
-import android.widget.FrameLayout;
 import android.widget.LinearLayout;
 import androidx.annotation.Nullable;
 import androidx.annotation.StringRes;
 import androidx.appcompat.app.AlertDialog;
-import com.google.android.material.dialog.MaterialAlertDialogBuilder;
 import xyz.zedler.patrick.grocy.R;
+import xyz.zedler.patrick.grocy.activity.WebDialogActivity;
 import xyz.zedler.patrick.grocy.databinding.ViewHtmlCardBinding;
 import xyz.zedler.patrick.grocy.util.ResUtil;
 import xyz.zedler.patrick.grocy.util.UiUtil;
@@ -53,6 +52,7 @@ public class HtmlCardView extends LinearLayout {
   private String html;
   private AlertDialog dialog;
   private String title;
+  private Activity activity;
 
   public HtmlCardView(Context context) {
     super(context);
@@ -85,7 +85,7 @@ public class HtmlCardView extends LinearLayout {
   }
 
   @SuppressLint("ClickableViewAccessibility")
-  public void setHtml(String html) {
+  public void setHtml(String html, Activity activity) {
     if (html != null) {
       html = html.replaceAll("</?font[^>]*>", ""); // remove font
       html = html.replaceAll(
@@ -132,48 +132,19 @@ public class HtmlCardView extends LinearLayout {
           }
         }
       });
-      binding.card.setOnClickListener(v -> showHtmlDialog());
+      binding.card.setOnClickListener(v -> showHtmlDialog(activity));
     } else {
       setVisibility(View.GONE);
     }
   }
 
-  public void showHtmlDialog() {
-    FrameLayout frameLayout = new FrameLayout(context);
-    frameLayout.setLayoutParams(
-        new FrameLayout.LayoutParams(
-            ViewGroup.LayoutParams.MATCH_PARENT, ViewGroup.LayoutParams.WRAP_CONTENT
-        )
-    );
-    WebView webView = new WebView(context);
-    webView.getSettings().setJavaScriptEnabled(false);
-    webView.getSettings().setDomStorageEnabled(false);
-    webView.getSettings().setCacheMode(WebSettings.LOAD_NO_CACHE);
-    webView.getSettings().setAllowFileAccess(false);
-    webView.loadDataWithBaseURL(
-        "file:///android_asset/", getFormattedHtml(html, false),
-        "text/html; charset=utf-8", "utf8", null
-    );
-    webView.setBackgroundColor(Color.TRANSPARENT);
-    webView.setVerticalScrollBarEnabled(false);
-    FrameLayout.LayoutParams layoutParams = new FrameLayout.LayoutParams(
-        FrameLayout.LayoutParams.MATCH_PARENT, FrameLayout.LayoutParams.WRAP_CONTENT
-    );
-    layoutParams.setMargins(
-        UiUtil.dpToPx(context, 17),
-        UiUtil.dpToPx(context, 10),
-        UiUtil.dpToPx(context, 17),
-        0
-    );
-    webView.setLayoutParams(layoutParams);
-    frameLayout.addView(webView);
-
-    dialog = new MaterialAlertDialogBuilder(context)
-        .setTitle(title)
-        .setView(frameLayout)
-        .setPositiveButton(R.string.action_close, (dialog, which) -> {})
-        .create();
-    dialog.show();
+  public void showHtmlDialog(Activity activity) {
+    Intent intent = new Intent(context, WebDialogActivity.class);
+    intent.putExtra("html", getFormattedHtml(html, false));
+    intent.putExtra("background", ResUtil.getColorAttr(context, R.attr.colorSurface));
+    context.startActivity(intent);
+    activity.overridePendingTransition(R.anim.fade_in, 0);
+    this.activity = activity;
   }
 
   private String getFormattedHtml(String html, boolean useOnSurfaceVariant) {
@@ -201,7 +172,7 @@ public class HtmlCardView extends LinearLayout {
     SavedState savedState = (SavedState) state;
     super.onRestoreInstanceState(savedState.getSuperState());
     if (savedState.isDialogShown) {
-      new Handler(Looper.getMainLooper()).postDelayed(this::showHtmlDialog, 1);
+      new Handler(Looper.getMainLooper()).postDelayed(() -> showHtmlDialog(activity), 1);
     }
   }
 
